# aass_icr

./: README.md
grasp_affordances/: CMakeLists.txt  package.xml
grasp_affordances/launch/: grasp_affordances.launch
grasp_affordances/src/: grasp_affordances.cpp
icr/: CMakeLists.txt  package.xml
icr_msgs/: CMakeLists.txt  package.xml
